--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -20,7 +20,7 @@ p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
 #page-header.cover h1 {margin-bottom:0px;}
-#page-header.page-title {color:var(--color-white);background-color:var(--color-black);background-image: url("/img/texture/asfalt.png");background-size:466px 349px;background-repeat: repeat;image-rendering: crisp-edges;}
+#page-header.page-title {color:var(--color-white);background-color:var(--color-black);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
 #cover-logo {position:fixed;top:144px;right:6px;z-index:-1;}
 img#cover-logo {max-width:230px!important;height:auto;}
 .text-left {text-align:left;}
@@ -42,21 +42,20 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 #icons a:hover {border:thin solid var(--color-blue);}
 figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
 
-/* TAGS & CATGEGORIES*/
+/* TAGS & CATGEGORIES */
 a.tagged  {color:var(--color-hardgrey) ;text-decoration: none;border:thin solid currentcolor;display:inline-block ; padding:4px 12px 6px 12px;margin-top:9px;border-radius:25px;}
 a.tagged:before  {content:'#'; }
 a.tagged:hover {color:var(--color-hardgrey) ;}
 .cat-post {height:110px;width:50%;float:left;}
 .cat-post h6 {text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
-p .mini {font-size:14px;line-height:15px;}
 .cat-img {width:170px;height:auto;float:left;margin:0 16px 0 0;}
 
 /* Portfolio Nav */
-#page-nav {border:none;color:var(--color-hardgrey);} 
-#page-nav a {min-width: 9%;max-height:100%;}
-#page-nav a:hover {border:thin solid rgba(0,0,0,.06);background:rgba(0,0,0,.02);}
+#page-nav {border-bottom: none;border-bottom:thin solid currentcolor;color:currentcolor;} 
+#page-nav a {min-width: 9%;margin:0;max-height:100%;}
+#page-nav a:hover {text-decoration:none;border:thin solid rgba(0,0,0,.06);background:rgba(0,0,0,.02);}
 #page-nav a:visited {color: var(--color-grey) ;}
-#page-nav div {height:80px;font-size:15px;}.serveis#page-main {padding:0;}
+#page-nav div {height:65px;font-size:15px;letter-spacing: 0.06em;}.serveis#page-main {padding:0;}
 /* nav Scroll */
 .nav-scroll label {font-size: 11px;line-height: 12px;padding: 10px;font-weight: normal;}
 .nav-scroll label b {font-size:25px;line-height:32px;font-weight:lighter;}
