--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -46,9 +46,9 @@ figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
 a.tagged  {color:var(--color-hardgrey) ;text-decoration: none;border:thin solid currentcolor;display:inline-block ; padding:4px 12px 6px 12px;margin-top:9px;border-radius:25px;}
 a.tagged:before  {content:'#'; }
 a.tagged:hover {color:var(--color-hardgrey) ;}
-.cat-post {height:110px;width:50%;float:left;}
+.cat-post {height:110px;width:50%;float:left;max-height:90px;}
 .cat-post h6 {text-overflow: ellipsis;white-space: nowrap;overflow: hidden;}
-.cat-img {width:170px;height:auto;float:left;margin:0 16px 0 0;}
+.cat-img {width:150px;height:auto;float:left;margin:0 16px 0 0;}
 
 /* Portfolio Nav */
 #page-nav {border-bottom: none;border-bottom:thin solid currentcolor;color:currentcolor;} 
