--- a/hipertextos/styles/screen.css
+++ b/hipertextos/styles/screen.css
@@ -1058,10 +1058,7 @@ nav a:hover,
 nav label:hover {
 	border: var(--one-pixel) solid currentColor;
 }
-nav.nav-scroll#page-nav {
-	background-color: var(--color-softgrey);
-    color:var(--color-hardgrey);
-}
+
 /* Red theme */
 
 #theme-soft:checked ~ #page,
@@ -1070,7 +1067,7 @@ nav.nav-scroll#page-nav {
 	color: var(--color-softtext);	
 }
 
-#theme-soft:checked ~ nav.nav-scroll#page-nav {
+#theme-soft:checked ~ #page-nav {
 	background-color: var(--color-hardgrey);
     color:var(--color-softtext);
 }
@@ -1117,7 +1114,7 @@ nav.nav-scroll#page-nav {
 	background-color: var(--color-softblack);
 	color: var(--color-white);	
 }
-#theme-dark:checked ~ nav.nav-scroll#page-nav {
+#theme-dark:checked ~ #page-nav {
 	background-color: var(--color-softblack);
     color:var(--color-softgrey);
 }
