--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -37,7 +37,7 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 #back-header {height:18vh!important;overflow:hidden!important;}
 .img-bolo#back-header {-webkit-filter:blur(23px);filter:blur(23px);min-width:100%;overflow:hidden!important;
     background-position:top;position:absolute;top:0;height:18vh!important;position: top center;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;text-align: center; }
-#page-header {}
+.page-title#page-header {border-bottom: none;text-shadow:2px 5px 9px rgba(0,0,0,.32);}
 #icons a {border:thin solid var(--color-soft);background: transparent;border-radius:50%;}
 #icons a:hover {border:thin solid var(--color-blue);}
 figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
