--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -12,8 +12,8 @@
 						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<form action="http://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="GoogleCSEID"> 
-							<input type="text" name="q" placeholder="cerca"> 
-							<input type="submit" name="sa" value="·"> 
+							<input type="text" name="q" placeholder="Buscar"> 
+							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
 					</div>
 				 </div>
