--- a/hipertextos/styles/screen.css
+++ b/hipertextos/styles/screen.css
@@ -782,7 +782,7 @@ nav form {
 	text-align: right;
 	top: var(--fifteen-pixel);
 	right: 0;
-	width: 8em;
+	width: 10em;
 	z-index: 2;
 }
 nav li form {
@@ -798,7 +798,7 @@ nav form input:focus {
 	text-align: center;
 }
 nav form input[type=text] {
-	width: 5em;
+	width: 7em;font-size:15px;line-height:16px;
 }
 nav form input[type=text]:focus {
 	background-color: var(--color-white);
@@ -808,17 +808,17 @@ nav form input[type=text]:focus {
 }
 nav form input[type=submit] {
 	background: var(--color-white);
-	border: var(--two-pixel) solid currentColor;
-	color: var(--color-grey);
-	display: none;
-	height: var(--fourtytwo-pixel); 	
+	border: none !important;position:absolute;
+	color: var(--color-hardgrey);
+	_display: none;
+	height: var(--thirty-pixel); 	
 	line-height: var(--thirtytwo-pixel); 	
-	margin-left: -2.25em;
+	margin-left: -1.85em;
 	padding: 0 var(--fifteen-pixel);
 	z-index: 10;
 }
 nav form input:focus ~ input[type=submit] {
-	display: inline-block;
+	display: inline-block;color: var(--color-grey);padding: 0 7px;transform: rotate(40deg);
 }
 nav label {
 	cursor: pointer;
