--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -1,12 +1,36 @@
-{% if related_posts != empty %}
-<div id="related-posts">
-  <h3>Related posts</h3>
-  <ul>
-    {% for p in related_posts %}
-      <li>
-        <a href="{{ p.url }}" data-score="{{ p.score }}">{{ p.title }}</a>
-      </li>
+<div class="relatedPosts">
+
+<h4>Relacionados</h4> 
+  
+{% assign maxRelated = 4 %}
+{% assign minCommonTags =  2 %}
+{% assign maxRelatedCounter = 0 %}
+
+{% for post in site.posts %}
+
+    {% assign sameTagCount = 0 %}
+    {% assign commonTags = '' %}
+
+    {% for category in post.categories %}
+      {% if post.url != page.url %}
+        {% if page.categories contains category %}
+          {% assign sameTagCount = sameTagCount | plus: 1 %}
+          {% capture tagmarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
+          {% assign commonTags = commonTags | append: tagmarkup %}
+        {% endif %}
+      {% endif %}
     {% endfor %}
-  </ul>
+
+    {% if sameTagCount >= minCommonTags %}
+      <div>
+      <h5><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}{{ commonTags }}</a></h5>
+      </div>
+      {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+      {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+      {% endif %}
+    {% endif %}
+
+  {% endfor %}
+
 </div>
-{% endif %}
