--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -1,36 +1,45 @@
 <div class="relatedPosts">
 
-<h4>Relacionados</h4> 
+<h4>Contenido Relacionado</h4> 
   
-{% assign maxRelated = 4 %}
-{% assign minCommonTags =  2 %}
-{% assign maxRelatedCounter = 0 %}
+<div class="rect">
 
-{% for post in site.posts %}
+  {% assign maxRelated = 4 %}
+  {% assign minCommonTags =  1 %}
+  {% assign maxRelatedCounter = 0 %}
 
+ 
+  {% for post in site.posts %}
+
+   
     {% assign sameTagCount = 0 %}
     {% assign commonTags = '' %}
 
-    {% for category in post.categories %}
+    {% for tag in post.tags %}
       {% if post.url != page.url %}
-        {% if page.categories contains category %}
+        {% if page.tags contains tag %}
           {% assign sameTagCount = sameTagCount | plus: 1 %}
-          {% capture tagmarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
+          {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
           {% assign commonTags = commonTags | append: tagmarkup %}
         {% endif %}
       {% endif %}
     {% endfor %}
 
     {% if sameTagCount >= minCommonTags %}
-      <div>
-      <h5><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}{{ commonTags }}</a></h5>
-      </div>
+    
+          <a href="{{ site.baseurl }}{{ post.url }}">
+              <div class="rel">
+                  <h5>{{ post.title }}</h5>
+                  <img width="100%" src="/thumbs-small/{{post.image}}">
+              </div>
+          </a>
+
       {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
       {% if maxRelatedCounter >= maxRelated %}
         {% break %}
       {% endif %}
     {% endif %}
-
   {% endfor %}
+</div>
 
 </div>
