--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -30,7 +30,7 @@
           <a href="{{ site.baseurl }}{{ post.url }}">
               <div class="rel">
                   <h5>{{ post.title }}</h5>
-                  <img width="100%" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg">
+                  <img width="100%" src="http://img.youtube.com/vi/{{ post.img }}/0.jpg">
               </div>
           </a>
 
