--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -2,7 +2,7 @@
 
 <h4><u>Contenido Relacionado</u></h4> 
   
-<div class="rect">
+<div id="rel-content" class="columns-4">
 
   {% assign maxRelated = 4 %}
   {% assign minCommonTags =  1 %}
