--- a/_includes/partials/related.html
+++ b/_includes/partials/related.html
@@ -29,8 +29,8 @@
     
           <a href="{{ site.baseurl }}{{ post.url }}">
               <div id="rel">
-                  <img class="thumb-6" width="100%" src="http://img.youtube.com/vi/{{ post.img }}/0.jpg">
-                  <h6  class="thumb-6">{{ post.title }}</h6>
+                  <img class="thumbnails" width="100%" src="http://img.youtube.com/vi/{{ post.img }}/0.jpg">
+                  <h6>{{ post.title }}</h6>
               </div>
           </a>
 
