--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -8,8 +8,8 @@
 					<div hidden>
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
-						<a href="{{ site.baseurl }}/xxx/" title="Extras">Virales</a>
-						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
+						<a href="{{ site.baseurl }}/xxx/" title="Tazas, camisetas, etc...">merchandising</a>
+						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<form action="http://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="GoogleCSEID"> 
 							<input type="text" name="q" placeholder="Buscar"> 
