--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -57,10 +57,10 @@ a.tagged:hover {color:var(--color-hardgrey) ;}
 #page-nav a:visited {color: var(--color-grey) ;}
 #page-nav div {height:65px;font-size:15px;letter-spacing: 0.06em;}.serveis#page-main {padding:0;}
 /* nav Scroll */
-.nav-scroll label {font-size: 11px;line-height: 12px;padding: 10px;font-weight: normal;}
+.nav-scroll label {font-size: 11px;line-height: 12px;min-width:54px;padding: 10px;font-weight: normal;}
 .nav-scroll label b {font-size:25px;line-height:32px;font-weight:lighter;}
 .nav-scroll label:hover {border:thin solid transparent;color:var(--color-black);text-decoration:none;}
-.nav-scroll #separador {opacity:.25;}
+.nav-scroll label#separador {opacity:.25!important;font-size:1.2em;top:-9px;padding-left:0px;padding-right:0;}
 /* Suscribe */
 form .button {border:thin solid currentColor;margin-top:0.6em;}
 
