--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -38,9 +38,8 @@
 		<main id="page-main">
 			<div>
 				<section class="thumb-9 anm-moveFromBottomFade delay-200">
-					<h1 class="anm-scaleUpCenter delay-400">
 					<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-400" rel="Logo Videos Manguis">
-					{{ site.name }}</h1>
+					<h1 class="anm-scaleUpCenter delay-400">{{ site.name }}</h1>
 					{{ content }}
 					<br>
 				</section>
