--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -2,11 +2,9 @@
 /* ------------------------------------------------------------ Resets */
 
 #page-header.about-cover {background-image: url("/img/texture/dark.png");background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
-#avatar {margin:0 15px 0 0;padding:2px}
+#avatar { margin: 0 15px 0 0;float:left;padding: 2px; max-width:128px;}
 .cover-page #page-header {border-bottom:10px solid var(--color-blue);background-color: var(--color-black);color: var(--color-blue);}
-.cover-page #page-main ul {-webkit-column-count: 3;-moz-column-count: 3;column-count: 3;}
 .cover-page #page-main {color:currentcolor;}
-.cover-page aside {border:none;color: currentcolor;}
 .cover-page a, .cover-page a:visited {color:currentcolor !important;background-color: transparent !important;}
 .cover-page a:hover {color:currentcolor !important;background-color: transparent !important;}
 .cover-page  #coffee {  background: var(--color-background);background: -webkit-linear-gradient(red, var(--color-background));background: -moz-linear-gradient(red, var(--color-background)); background: linear-gradient(#eee, var(--color-background));}
