--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -36,7 +36,7 @@
 			</div>
 		</header>
 		<main id="page-main">
-				<section class="thumb-9 anm-moveFromBottomFade delay-200">
+				<section class="anm-moveFromBottomFade delay-200">
 			<div>
 					<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-400" rel="Logo Videos Manguis">
 					<h1 class="anm-scaleUpCenter delay-400">{{ site.name }}</h1>
