--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,7 +42,7 @@
 					<h1 class="anm-scaleUpCenter delay-400">{{ site.name }}</h1>
 				</section>
 			</div>
-			<div id="about-content">{{ content }}</div>
+			<article id="about-content">{{ content }}</article>
 
 			{% include partials/credits.html %}
     		{% include partials/coffee.html %}   		
