--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -40,7 +40,7 @@
 				<section class="anm-moveFromBottomFade delay-200">
 					<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-400" rel="Logo Videos Manguis">
 					<h1 class="anm-scaleUpCenter delay-400">{{ site.name }}</h1>
-					<h5 class="anm-scaleUpCenter delay-500">{{ site.led }}</h1>
+					<h5 class="anm-scaleUpCenter delay-500">{{ page.led }}</h5>
 					<hr>
 				</section>
 			</div>
