--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -2,6 +2,7 @@
 /* ------------------------------------------------------------ Resets */
 
 #page-header.about-cover {background-image: url("/img/texture/dark.png");background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
+#about-content {text-align: center;border:none;}
 #avatar { margin: 0 15px 0 0;float:left;padding: 2px; max-width:128px;}
 .cover-page #page-header {border-bottom:10px solid var(--color-blue);background-color: var(--color-black);color: var(--color-blue);}
 .cover-page #page-main {color:currentcolor;}
