--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,12 +42,13 @@
 				<section class="anm-moveFromBottomFade delay-200">
 					<div id="about-icons">
 						<div>
+							<h6>Síguenos!</h6>
 							<p>
-								<em><a href="mailto:{{ site.footer-links.email }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/gmail.svg" alt="botó eMail"><br>eMail</a></em>
-								<em><a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/twitter.svg" alt="botó Twitter"><br>Twitter</a></em>
-								<em><a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/facebook.svg" alt="botó facebook"><br>Facebook</a></em>
-								<em><a href="https://instagram.com/{{ site.footer-links.instagram }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/instagram.svg" alt="botó Instagram"><br>Instagram</a></em>
-								<em><a href="{{ site.baseurl }}/hipertextos/brand/vcard.vcf" download=".vcard"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/arrows.svg" alt="botó desar vCard"><br>vCard</a></em>
+{% if site.footer-links.youtube %}<em><a href="https://youtube.com/{{ site.footer-links.youtube }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/youtube.svg" alt="botó YouTube"><br>YouTube</a></em>{% endif %}
+{% if site.footer-links.googleplus %}<em><a href="https://google.plus.com/{{ site.footer-links.googleplus }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/google-plus.svg" alt="botó Google Plus"><br>Google Plus</a></em>{% endif %}
+{% if site.footer-links.twitter %}<em><a href="https://www.twitter.com/{{ site.footer-links.twitter }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/twitter.svg" alt="botó Twitter"><br>Twitter</a></em>{% endif %}
+{% if site.footer-links.facebook %}<em><a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/facebook.svg" alt="botó facebook"><br>Facebook</a></em>{% endif %}
+{% if site.footer-links.instagram %}<em><a href="https://instagram.com/{{ site.footer-links.instagram }}"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/instagram.svg" alt="botó Instagram"><br>Instagram</a></em>{% endif %}
 							</p>
 						</div>
 					</div>
