--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -73,8 +73,8 @@ form .button {border:thin solid currentColor;margin-top:0.6em;}
 #dialog header h2 svg {width:32px;margin:0px 12px 0 0;}
 #dialog header h2 {font-size: 2.3em;margin-bottom:6px;}
 #dialog header .lead {line-height: 1em;margin-bottom:7px;}
-#dialog em a {border:none;color:var(--color-grey);}
-img.dialog-svg {width:120px;height:150px;}
+#about-icons em a {font-size:15px;text-decoration:none;}
+img.dialog-svg {width:80px;height:80px;border-radius:23%;}
 #dialog dialog div a {font-size:15px;}
 #dialog header {padding-top:0px;}
 #dialog header, #dialog dialog label  {background:var(--color-soft-black);color:var(--color-hardgrey);}
