--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,9 +49,9 @@
 					</p>
 				</div>
 			</div>
-			<div id="starwars" class="full-cover">
+			<section id="starwars" class="full-cover">
 				<h3>{{ page.previ }}</h3>
-			</div>
+			</section>
 			<div>
 				<section>
 					<hr>
