--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,7 +50,9 @@
 				</div>
 			</div>
 			<section id="starwars" class="full-cover">
-				<h3>{{ page.previ }}</h3>
+				<div>
+					<h3>{{ page.previ }}</h3>
+				</div>
 			</section>
 			<div>
 				<section>
