--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,6 +49,10 @@
 					</p>
 				</div>
 			</div>
+			<div>
+				<h5>{{ page.intro }}</h5>
+			<hr>
+			</div>
 			<section id="starwars" class="full-cover">
 				<div>
 					<h4>{{ page.previ }}</h4>
