--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,9 +49,8 @@
 					</p>
 				</div>
 			</div>
-			<div>
+			<div id="intro">
 				<h5>{{ page.intro }}</h5>
-			<hr>
 			</div>
 			<section id="starwars" class="full-cover">
 				<div>
