--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,10 +49,10 @@
 					</p>
 				</div>
 			</div>
-			<div id="intro">
+			<div id="intro" class="anm-fadeIn delay-600">
 				<h5>{{ page.intro }}</h5>
 			</div>
-			<section id="starwars" class="full-cover">
+			<section id="starwars" class="full-cover anm-fadeIn delay-800">
 				<div>
 					<h4>{{ page.previ }}</h4>
 				</div>
