--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,6 +50,8 @@
 				</div>
 			</div>
 			<div id="intro" class="anm-fadeIn delay-600">
+				<h5>{{ page.about }}</h5>
+				<em><hr></em>
 				<h5>{{ page.intro }}</h5>
 			</div>
 			<section id="starwars" class="full-cover anm-fadeIn delay-800">
