--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -51,6 +51,7 @@
 			</div>
 			<div id="intro" class="anm-fadeIn delay-600">
 				<h5>{{ page.about }}</h5>
+				<h5>{{ page.lab }}</h5>
 				<em><hr></em>
 				<h5>{{ page.intro }}</h5>
 			</div>
