--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,8 +50,7 @@
 				</div>
 			</div>
 			<div id="intro" class="anm-fadeIn delay-600">
-				<h5>{{ page.about }}</h5>
-				<h5>{{ page.lab }}</h5>
+				<h5>{{ page.about }}<br>{{ page.lab }}</h5>
 				<em><hr></em>
 				<h5>{{ page.intro }}</h5>
 			</div>
