--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,12 +49,12 @@
 					</p>
 				</div>
 			</div>
-				<div id="follow-yt" class="thumb-3 anm-fadeIn delay-600">
+				<div id="follow-yt" class="anm-fadeIn delay-600">
 					<h2>Síguenos!</h2>
 					<script src="https://apis.google.com/js/platform.js"></script>
 					<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
 				</div>
-				<div id="intro" class="thumb-6 anm-fadeIn delay-600">
+				<div id="intro" class="anm-fadeIn delay-600">
 					<h5>{{ page.about }}<br>{{ page.lab }}</h5>
 					<em><hr></em>
 					<h5>{{ page.intro }}</h5>
