--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,7 +49,7 @@
 					</p>
 				</div>
 			</div>
-			<section id="layout">
+			<div id="layout">
 				<div id="follow-yt" class="thumb-3 anm-fadeIn delay-600">
 					<h2>Síguenos!</h2>
 					<script src="https://apis.google.com/js/platform.js"></script>
@@ -60,7 +60,7 @@
 					<em><hr></em>
 					<h5>{{ page.intro }}</h5>
 				</div>
-			</section>
+			</div>
 			<hr>
 			<section id="starwars" class="full-cover anm-fadeIn delay-800">
 				<div>
