--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -50,7 +50,7 @@
 			</div>
 			<div id="layout">
 				<div id="intro" class="anm-fadeIn delay-600">
-					<div id="follow-yt" class="thumb-3 anm-fadeIn delay-600">
+					<div id="follow-yt" class="anm-fadeIn delay-600">
 						<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-200" rel="Logo Videos Manguis">
 						<script src="https://apis.google.com/js/platform.js"></script>
 						<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
