--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -64,6 +64,7 @@
 			<section id="starwars" class="full-cover anm-fadeIn delay-800">
 				<div>
 					<h4>{{ page.previ }}</h4>
+					<h5><small>Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</small></h5>
 				</div>
 			</section>
 			<div>
