--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -65,6 +65,10 @@
 				<div>
 					<h4>{{ page.previ }}</h4>
 					<h5><small>Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</small></h5>
+					<em><hr></em>
+					<h2>Atención Spoilers!</h2>
+					<h6>Aún no han hecho la peli pero por si acaso, nunca se sabe...</h6>
+					<em><hr></em>
 				</div>
 			</section>
 			<div>
