--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -61,7 +61,7 @@
 					<h5><small>Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</small></h5>
 					<em><hr></em>
 					<h2>Atención Spoilers!</h2>
-					<h6>Aún no han hecho la peli pero por si acaso, nunca se sabe...</h6>
+					<h6>Aún no han hecho la peli pero nunca se sabe</h6>
 					<em><hr></em>
 				</div>
 			</div>
