--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -30,28 +30,28 @@
 	<!-- Page content -->
 	<div class="page cover-page" id="page">
 	{% include partials/navigation/nav.html %}
-		<header id="page-header" class="about-cover anm-moveFromTop">
+		<header id="page-header" class="about-cover anm-moveFromTop delay-200">
 			<div>
-					<h1 class="anm-scaleUpCenter delay-300">{{ site.name }}</h1>
-					<h5 class="anm-scaleUpCenter delay-500">{{ page.led }}</h5>
+					<h1 class="anm-zoomIn delay-400">{{ site.name }}</h1>
+					<h5 class="anm-fadeIn delay-500">{{ page.led }}</h5>
 			</div>
 		</header>
 		<main id="page-main">
-			<div id="about-icons" class="anm-zoomIn delay-500">
+			<div id="about-icons">
 				<div>
 					<p>
-{% if site.footer-links.youtube %}<em><a href="https://youtube.com/{{ site.footer-links.youtube }}" title="Síguenos en Youtube"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/youtube.svg" alt="botó YouTube"><br>YouTube</a></em>{% endif %}
-{% if site.footer-links.twitter %}<em><a href="https://www.twitter.com/{{ site.footer-links.twitter }}" title="Síguenos en Twitter"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/twitter.svg" alt="botó Twitter"><br>Twitter</a></em>{% endif %}
-{% if site.footer-links.facebook %}<em><a href="https://www.facebook.com/{{ site.footer-links.facebook }}" title="Síguenos en Facebook"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/facebook.svg" alt="botó facebook"><br>Facebook</a></em>{% endif %}
-{% if site.footer-links.googleplus %}<em><a href="https://google.plus.com/{{ site.footer-links.googleplus }}" title="Síguenos en Google Plus"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/google-plus.svg" alt="botó Google Plus"><br>Google Plus</a></em>{% endif %}
-{% if site.footer-links.instagram %}<em><a href="https://instagram.com/{{ site.footer-links.instagram }}" title="Síguenos en Instagram"><img class="dialog-svg" src="{{ site.baseurl }}/hipertextos/svg/instagram.svg" alt="botó Instagram"><br>Instagram</a></em>{% endif %}
+{% if site.footer-links.youtube %}<em><a href="https://youtube.com/{{ site.footer-links.youtube }}" title="Síguenos en Youtube"><img class="dialog-svg anm-zoomIn delay-400" src="{{ site.baseurl }}/hipertextos/svg/youtube.svg" alt="botó YouTube"><br>YouTube</a></em>{% endif %}
+{% if site.footer-links.twitter %}<em><a href="https://www.twitter.com/{{ site.footer-links.twitter }}" title="Síguenos en Twitter"><img class="dialog-svg anm-zoomIn delay-500" src="{{ site.baseurl }}/hipertextos/svg/twitter.svg" alt="botó Twitter"><br>Twitter</a></em>{% endif %}
+{% if site.footer-links.facebook %}<em><a href="https://www.facebook.com/{{ site.footer-links.facebook }}" title="Síguenos en Facebook"><img class="dialog-svg anm-zoomIn delay-600" src="{{ site.baseurl }}/hipertextos/svg/facebook.svg" alt="botó facebook"><br>Facebook</a></em>{% endif %}
+{% if site.footer-links.googleplus %}<em><a href="https://google.plus.com/{{ site.footer-links.googleplus }}" title="Síguenos en Google Plus"><img class="dialog-svg anm-zoomIn delay-700" src="{{ site.baseurl }}/hipertextos/svg/google-plus.svg" alt="botó Google Plus"><br>Google Plus</a></em>{% endif %}
+{% if site.footer-links.instagram %}<em><a href="https://instagram.com/{{ site.footer-links.instagram }}" title="Síguenos en Instagram"><img class="dialog-svg anm-zoomIn delay-800" src="{{ site.baseurl }}/hipertextos/svg/instagram.svg" alt="botó Instagram"><br>Instagram</a></em>{% endif %}
 					</p>
 				</div>
 			</div>
 			<div id="layout">
 				<div id="intro" class="anm-fadeIn delay-600">
 					<div id="follow-yt" class="anm-fadeIn delay-600">
-						<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-200" rel="Logo Videos Manguis">
+						<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-700" rel="Logo Videos Manguis">
 						<script src="https://apis.google.com/js/platform.js"></script>
 						<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
 					</div>
