--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -58,7 +58,7 @@
 					<h5>{{ page.about }}<br>{{ page.lab }}</h5>
 					<em><hr></em>
 					<h5>{{ page.intro }}</h5>
-					<h5><small>Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</small></h5>
+					<p><b>Nota:</b> Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</p>
 					<em><hr></em>
 					<h2>Atención Spoilers!</h2>
 					<h6>Aún no han hecho la peli pero nunca se sabe</h6>
