--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -60,8 +60,10 @@
 					<h5>{{ page.intro }}</h5>
 					<p><b>Nota:</b> Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</p>
 					<em><hr></em>
-					<h2>Atención Spoilers!</h2>
-					<h6>Aún no han hecho la peli pero nunca se sabe</h6>
+					<div id="spoilers">
+						<h2>Atención Spoilers!</h2>
+						<h6>Aún no han hecho la peli pero nunca se sabe</h6>
+					</div>
 					<em><hr></em>
 				</div>
 			</div>
